Added rings visualization

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,8 @@
 </head>
 
 <body>
-  <!-- partial:index.partial.html -->
-  <!-- Left Menu -->
-  <main></main>
+  <!-- <main></main> -->
 
-  <!-- <script src='https://code.responsivevoice.org/responsivevoice.js'></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/68/three.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
